--- a/views/guardados.ejs
+++ b/views/guardados.ejs
@@ -18,6 +18,10 @@
             <img src="<%= data[item].url_imagem %>" alt="">
         <% } %>
         <h3><%= data[item].autor %></h3>
+        <form action="deletar">
+            <input type="hidden" name="titulo" value="<%= data[item].titulo %>">
+            <input type="submit" value="Deletar livro">
+        </form>
         <hr>
     <% } %>
 </body>
