--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,12 @@
         <input type="submit" value="Ver livros guardados">
     </form>
 
-    <% if (user.length > 0)  { %>
-        <h1>Olá <%= user %>!</h1>
+    <a href="/logout">Sair da conta</a>
+
+    <h1>Olá <%= user.name %>!</h1>
+
+    <% if (message) { %>
+        <h3><%= message %></h3>
     <% } %>
 
     <% for(let i=0; i < data.length; i++) { %>
