fix: Correção na chamada dos arquivos public

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="/css/login.css">
     <title>Biblioteca</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="container">
             <form action="/login" method="post">
                 <div class="img">
-                    <img src="../public/img/biblioteca 2-01.png" alt="">
+                    <img src="/img/biblioteca 2-01.png" alt="">
                 </div><!--img-->
                 <h1>Login</h1>
                 <input class="email" type="text" id="email" name="email" required placeholder="E-mail">
