--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,7 @@
                 <input class="login" type="submit" value="Entrar">
                 <p class="line"></p> 
                 <a href="#">Esqueci a Senha</a>
+                <a href="/register">Criar conta</a>
                 <button class="google"><i class="fa-brands fa-google"></i> Continuar com o Google</button>
                 <button><i class="fa-brands fa-facebook"></i> Continuar com Facebook</button>
 
