--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
                 </div><!--img-->
                 <h1>Login</h1>
                 <input class="email" type="text" id="email" name="email" required placeholder="E-mail">
-                <input class="password" id="password" name="password" required placeholder="Senha">
+                <input class="password" type="password" id="password" name="password" required placeholder="Senha">
                 <input class="login" type="submit" value="Entrar">
                 <p class="line"></p> 
                 <a href="#">Esqueci a Senha</a>
