--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,6 +18,7 @@
                     <th>Email</th>
                     <th>Nível de acesso</th>
                     <th>Mudar nível de acesso para:</th>
+                    <th>Livros guardados</th>
                 </tr>
             </thead>
             <tbody>
@@ -34,6 +35,7 @@
                                     <option value="user" <%= user.privilege == 'user' ? 'selected' : '' %>>User</option>
                                 </select>
                             </td>
+                            <td id="<%= user.id %>" class="counter">Carregando...</td>
                         </tr>
                     <% } %>
                 <% }) %>
@@ -62,6 +64,30 @@
             console.error('Error:', error);
         });
     }
+
+    function countBooks(user_id, counter) {
+        fetch('/countBooks/' + user_id, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (!data.count) {
+                throw new Error('No count received');
+            }
+            counter.innerText = data.count[0].count
+        })
+        .catch((error) => {
+            console.error('Error:', error);
+        });
+    }
+
+    const counters = document.querySelectorAll('.counter');
+        counters.forEach(counter => {
+            countBooks(counter.id, counter);
+    });
 </script>
 </body>
 </html>
