--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -41,7 +41,7 @@ form{
     flex-direction: column;
     justify-content: center;
     box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.3);
-   
+   background-color: #d6d6d6;
     
 }
 
@@ -83,8 +83,3 @@ a{
 
 
 
-
-#name{
-    width: 36%;
- 
-}
