--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,11 +19,13 @@
                 <input class="password" id="password" name="password" required placeholder="Senha">
                 <input class="login" type="submit" value="Entrar">
                 <p class="line"></p> 
-                <a href="#">Esqueci a Senha</a>
+                <a href="#">Criar Conta</a>
+                <a href="/register">Esqueci a Senha</a>
                 <button class="google"><i class="fa-brands fa-google"></i> Continuar com o Google</button>
                 <button><i class="fa-brands fa-facebook"></i> Continuar com Facebook</button>
-
                 
+                
+              
                 
     <% if (message) { %>
         <p><%= message %></p>
