--- a/views/singin.ejs
+++ b/views/singin.ejs
@@ -27,7 +27,7 @@
 
                 
                 <% if (message) { %>
-                    <p> <!--posso mudar-->   <%= message %>  <!--posso mudar-->  </p>
+                    <p>  <%= message %>  <  </p>
                 <% } %>
             </form>
         </div><!--container-->
