--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/section.css">
     <title>Document</title>
 </head>
 <body>
+    <section>
+        <header>
+    
     <form action="/search" method="GET">
-        <input type="text" name="q" placeholder="Search books">
+        <input type="text" name="q" placeholder="Search books" class="encontrar">
         <input type="submit" value="Search">
     </form>
+
 
     <form action="/livrosGuardados">
         <input type="submit" value="Ver livros guardados">
@@ -40,8 +45,9 @@
         </select>
         <input type="submit" value="Filtrar">
     </form>
-
-    <% for(let i=0; i < data.length; i++) { %>
+</header>
+<div class="book-card">
+    <% for(let i=0; i <data.length; i++) { %>
         <h2><%= data[i].volumeInfo.title %></h2>
         <form action="/guardar" method="post">
             <input type="hidden" name="title" value="<%= data[i].volumeInfo.title %>">
@@ -49,6 +55,7 @@
             <input type="hidden" name="image" value="<%= data[i].volumeInfo.imageLinks && data[i].volumeInfo.imageLinks.thumbnail ? data[i].volumeInfo.imageLinks.thumbnail : 'false' %>">
             <input type="submit" value="Guardar livro">
         </form>
+   
         <h3><%= data[i].volumeInfo.authors ? data[i].volumeInfo.authors.join(', ') : 'Autor desconhecido' %></h3>
         <% if(data[i].volumeInfo.imageLinks && data[i].volumeInfo.imageLinks.thumbnail) { %>
             <img src="<%= data[i].volumeInfo.imageLinks.thumbnail%>" alt="">
@@ -62,5 +69,8 @@
         <% } %>
         <hr>
     <% } %>
+</div> <!--book-card-->
+
+</section>
 </body>
 </html>
