--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Admin Page</title>
 </head>
 <body>
@@ -36,7 +37,11 @@
                             <% if (user.email != selectedUser.email) { %>
                                 <tr>
                                     <td>
-                                        <img src="<%= user.profilepicture %>" alt="Foto de Perfil">
+                                        <div class="functions">
+                                            <img src="<%= user.profilepicture %>" alt="Foto de Perfil">
+                                            <a href="/profile/<%= user.id %>"><i class="fa-solid fa-pencil"></i></a>
+                                            <a href="/delete/<%= user.id %>"><i class="fa-solid fa-trash"></i></a>
+                                        </div><!-- functions -->
                                     </td>
                                     <td><%= user.name %></td>
                                     <td><%= user.email %></td>
