feat: Correção do middleware e padronização do header

--- a/views/guardados.ejs
+++ b/views/guardados.ejs
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/guardados.css">
     <title>Document</title>
 </head>
 <body>
+
+    <%- include('header') %>
+
+    
     <h1>Livros guardados</h1>
     <form action="/voltarHome">
         <input type="submit" value="Voltar à página inicial">
