Sla, eu to ficando doido com esse middleware já

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -41,7 +41,7 @@
     </div><!-- container -->
 </header>
 
-<nav aria-label="breadcrumb">
+<nav class="breadcrumb-container" aria-label="breadcrumb">
     <div class="container">
         <ol id="breadcrumb" class="breadcrumb">
             
