--- a/public/css/header.css
+++ b/public/css/header.css
@@ -144,34 +144,30 @@ header {
 
 nav.breadcrumb-container {
     margin: 10px 0;
-
-    .breadcrumb {
-        display: flex;
-        list-style: none;
-        padding: 0;
-        background: none;
-
-        .breadcrumb-item {
-            margin-right: 5px;
-
-            &:not(:last-child)::after {
-                content: '>';
-                margin-left: 5px;
-                color: #000;
-            }
-
-            a {
-                text-decoration: none;
-                color: #000;
-
-                &:hover {
-                    text-decoration: underline;
+    .container {
+        .breadcrumb {
+            display: flex;
+            list-style: none;
+            padding: 0;
+            background: none;
+            .breadcrumb-item {
+                margin-right: 5px;
+                &:not(:last-child)::after {
+                    content: '>';
+                    margin-left: 5px;
+                    color: #000;
                 }
-            }
-
-            &.active {
-                color: #555;
-                pointer-events: none;
+                a {
+                    text-decoration: none;
+                    color: #000;
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+                &.active {
+                    color: #555;
+                    pointer-events: none;
+                }
             }
         }
     }
