fix: Correção definitiva do middleware e do botão de favorito

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -61,7 +61,7 @@
             </div><!-- col -->
         </div><!-- container -->
     </section>
-<script>
+<script nonce="<%= nonce %>">
     function updatePrivilege(email, newPrivilege, userId) {
         fetch('/updatePrivilege', {
             method: 'POST',
