--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -46,7 +46,7 @@
         </div><!-- container -->
     </section>
 
-    <script>
+    <script nonce="<%= nonce %>">
         function triggerFileInput() {
             document.getElementById('profilePicture').click();
         }
