--- a/public/css/header.css
+++ b/public/css/header.css
@@ -15,6 +15,161 @@ html, body {
     padding: 0 2%;
 }
 
+/* Estilos do botão hamburger */
+.hamburger {
+    cursor: pointer;
+    position: relative;
+    z-index: 1001;
+    display: none;
+
+    input {
+        display: none;
+    }
+
+    svg {
+        height: 3em;
+        transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        .line {
+            fill: none;
+            stroke: white;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+            stroke-width: 3;
+            transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+                        stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .line-top-bottom {
+            stroke-dasharray: 12 63;
+        }
+    }
+
+    input:checked + svg {
+        transform: rotate(-45deg);
+
+        .line-top-bottom {
+            stroke-dasharray: 20 300;
+            stroke-dashoffset: -32.42;
+        }
+    }
+}
+
+/* Overlay para escurecer o fundo */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
+
+    body.menu-open & {
+        opacity: 1;
+        visibility: visible;
+        transition: opacity 0.3s ease-in-out;
+    }
+}
+
+/* Sidebar */
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    max-width: 300px;
+    height: 100%;
+    background: #1d1d1d;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    transition: left 0.3s ease-in-out;
+    z-index: 1000;
+    .user-info {
+        margin-top: 50px;
+        text-align: center;
+        margin-bottom: 20px;
+        display: flex;
+        align-items: flex-start;
+        gap: 10px;
+        border-bottom: 1px solid #2a2a2a;
+        padding-bottom: 10px;
+        .profilePictureMobile {
+            border: 2px solid #414342;
+            border-radius: 20px;
+            display: flex;
+            img {
+                width: 80px;
+                height: 80px;
+                border-radius: 20px;
+            }
+        }
+        .info {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            text-align: left;
+            h3 {
+                font-size: 20px;
+                color: #adadb1;
+                margin-bottom: 0;
+            }
+            p {
+                font-size: 16px;
+                color: #bbb;
+            }
+        }
+    }
+    h3 {
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+        color: #4c5664;
+    }
+    .sidebar-menu {
+        ul {
+            list-style: none;
+            li {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin: 20px 0;
+                gap: 10px;
+                i:not(:last-child) {
+                    color: #7a7d83;
+                    background-color: #2a2a2a;
+                    padding: 10px;
+                    border-radius: 10px
+                }
+                a {
+                    margin-right: auto;
+                    color: #7a7d83;
+                    text-decoration: none;
+                    display: block;
+                }
+                i:last-child {
+                    color: #7a7d83;
+                }
+            }
+        }
+    }
+}
+
+body.menu-open {
+    overflow: hidden;
+    .sidebar {
+        left: 0;
+    }
+
+    .overlay {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
 header {
     .container {
         .flexHeader {
@@ -40,6 +195,7 @@ header {
                     border: 1px solid #fff;
                     padding: 5px;
                     border-radius: 10px;
+                    display: flex;
 
                     input {
                         border: none;
@@ -170,5 +326,23 @@ nav.breadcrumb-container {
                 }
             }
         }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    .user {
+        display: none;
+    }
+
+    .search {
+        display: none !important;
+    }
+
+    .logo {
+        margin: 0 auto;
     }
 }
