--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,25 +11,30 @@
 
 <%- include('header') %>
 
-    <h1>Olá <%= user.name %>!</h1>
+<section class="main">
+    <div class="container">
+        <h1>Olá <%= user.name %>!</h1>
+        
+        <% if (message) { %>
+            <h3><%= message %></h3>
+        <% } %>
+        
+        <form action="/filter" method="POST">
+            <label for="genre">Selecione o gênero:</label>
+            <select name="genre" id="genre">
+                <option value="" <%= subject === '' ? 'selected' : '' %>></option>
+                <option value="fiction" <%= subject === 'fiction' ? 'selected' : '' %>>Ficção</option>
+                <option value="fantasy" <%= subject === 'fantasy' ? 'selected' : '' %>>Fantasia</option>
+                <option value="mystery" <%= subject === 'mystery' ? 'selected' : '' %>>Mistério</option>
+                <option value="biography" <%= subject === 'biography' ? 'selected' : '' %>>Biografia</option>
+                <option value="science" <%= subject === 'science' ? 'selected' : '' %>>Ciência</option>
+                <option value="history" <%= subject === 'history' ? 'selected' : '' %>>História</option>
+            </select>
+            <input type="submit" value="Filtrar">
+        </form>
+    </div><!--container-->
+</section>
 
-    <% if (message) { %>
-        <h3><%= message %></h3>
-    <% } %>
-
-    <form action="/filter" method="POST">
-        <label for="genre">Selecione o gênero:</label>
-        <select name="genre" id="genre">
-            <option value="" <%= subject === '' ? 'selected' : '' %>></option>
-            <option value="fiction" <%= subject === 'fiction' ? 'selected' : '' %>>Ficção</option>
-            <option value="fantasy" <%= subject === 'fantasy' ? 'selected' : '' %>>Fantasia</option>
-            <option value="mystery" <%= subject === 'mystery' ? 'selected' : '' %>>Mistério</option>
-            <option value="biography" <%= subject === 'biography' ? 'selected' : '' %>>Biografia</option>
-            <option value="science" <%= subject === 'science' ? 'selected' : '' %>>Ciência</option>
-            <option value="history" <%= subject === 'history' ? 'selected' : '' %>>História</option>
-        </select>
-        <input type="submit" value="Filtrar">
-    </form>
 
     <section class="books">
         <div class="container">
