--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
             </div><!--allBooks-->
         </div><!--container-->
     </section>
-    <script nonce="<%= nonce %>">
+    <script >
         document.querySelectorAll('.titleBook').forEach(function(title) {
             let tam = 25;
             if (title.textContent.length > tam) {
