--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -14,6 +14,28 @@ html, body {
     padding: 0 2%;
 }
 
+.loading {
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9999999999999999999999999999999999999999999;
+    .spinner {
+        width: 100px;
+        height: 100px;
+        border: 5px solid #f3f3f3;
+        border-top: 5px solid #3498db;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+    }
+}
+
+
 header {
     margin-bottom: 20px;
     .container {
@@ -107,5 +129,14 @@ section.configUser {
                 background-color: #0056b3;
             }
         }
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
